added new units

--- a/UI.html
+++ b/UI.html
@@ -34,7 +34,7 @@
 
 
 	<body>
-		
+		<div class = "whosTurn">Player one GO</div>
 		<button onclick="endTurn();"> End Turn </button>
 		<button href="#" id="build"> Place New Base</button>
 
